Fixes based on comments from tjm

--- a/background/c_background.tex
+++ b/background/c_background.tex
@@ -1,7 +1,7 @@
 
  \chapter{Background}
  
-This chapter describes software quality and methods for improving quality in software projects. The first section describes software quality in general and the motivation behind improving quality. In the second section the most popular active and passive methods for improving quality are introduced.
+This chapter describes software quality and methods for improving quality in software projects. The first section describes software quality in general and the motivation behind improving quality. The second section explains the background and context of a startup environment.
 
  \input{background/s_quality_general}
 
