--- a/background/s_quality_general.tex
+++ b/background/s_quality_general.tex
@@ -6,7 +6,7 @@ TODO: Tästä pitäisi johdatella seuraavaan sisältöön
 
 \subsection{Motivation}
 
-Phil Crosby has made popular a concept that establishing a quality program will return in savings more than the program costs and thus "quality is free" [VIITE Quality is free]. Even though Crosby's concept is used mainly in the manufacturing sector, it has some truth that can be applied to the software business.  In addition, the "cost of quality" is a slightly inappropriate term, considering that quality in itself doesn't create costs but the lack of it does. 
+Phil Crosby has made popular a concept that establishing a quality program will return in savings more than the program costs and thus "quality is free"~\cite{crosby1980quality}. Even though Crosby's concept is used mainly in the manufacturing sector, it has some truth that can be applied to the software business.  In addition, the "cost of quality" is a slightly inappropriate term, considering that quality in itself doesn't create costs but the lack of it does.
 
 %\ Cancellation 31\% for 10000 function point projects. Costs 35M\$ vs high quality 20m\$
 Studies have shown that software quality has huge impact on project costs and success. Measurements on 10000 function point projects show that about 31\% of projects of that size come to an end by cancellation. The average cost of these canceled projects is about \$35,000,000. Successful projects of similar size with good quality have about 40\% lower costs. These figures endorse the effort put towards the software quality and make it clear that at least in large scale projects, quality control shouldn't be ignored.
@@ -15,20 +15,14 @@ Studies have shown that software quality has huge impact on project costs and su
 Capers Jones has listed several points that make high quality a major economic benefit. In the development of large systems, high quality from the beginning can reduce the probability of cancellations. Software projects can also benefit by achieving shorter development schedules. Shorter schedules with high quality also lower the costs of a project. Lower development costs, maintenance costs and warranty costs can add up to considerable amounts of cost savings. In addition to the quantitative benefits, high quality raises the satisfaction of customers, end-users and developers. 
 
 % ECO: it is gratifying to observe that high quality levels are invariably associated with shorter-than-average development schedules and lower-than-average development costs
-Jones expresses concerns towards the poor measurement of software quality causing executives and even quality personnel to treat software quality as an expense. Those participants may also treat quality as an issue that is raising the development costs and increasing development schedules. On the contrary, Jones summarizes the benefits of high quality: "However, from an analysis of about 13,000 software projects between 1973 and today, it is gratifying to observe that high quality levels are invariably associated with shorter-than-average development schedules and lower-than-average development costs"~\cite{jones2011economics}
+Jones expresses concerns towards the poor measurement of software quality causing executives and even quality personnel to treat software quality as an expense. Those participants may also treat quality as an issue that is raising the development costs and increasing development schedules. On the contrary, Jones summarizes the benefits of high quality: "However, from an analysis of about 13,000 software projects between 1973 and today, it is gratifying to observe that high quality levels are invariably associated with shorter-than-average development schedules and lower-than-average development costs".~\cite{jones2011economics}
 
  
 
 \subsection{Software Quality Defined}
 
 % ECO: Chapter 1
-The word "quality" has many tones and thus it complicates defining quality and especially software quality. The word "quality" can be understood as elegance or beauty, fitness of use, satisfaction of user requirements, freedom from defects, high reliability, and ease of use, among multiple other things. These descriptions appear even more complicated considering that quality and its attributes are bound to not just the observer but also the operation context in question. While a software component can have excellent quality in some context it can still be even dangerous in others. The same applies in several attributes of quality. A component can be fit for some use, but defective in different contexts. Some component can satisfy the users requirements in one environment, but can be useless in others.~\cite{jones2011economics}
-
-% Softabisneksessäkin Subjektiivista
-TODO: Tämä kappale
-In software business, quality has also multiple viewpoints. Quality has different meanings for vendors, customers, end-users etc. 
-
-
+The word "quality" has many tones and thus it complicates defining quality and especially software quality. It can be understood as elegance or beauty, fitness of use, satisfaction of user requirements, freedom from defects, high reliability, and ease of use, among multiple other things. These descriptions appear even more complicated considering that quality and its attributes are bound to not just the observer but also the operation context in question. While a software component can have excellent quality in some context it can still be even dangerous in others. The same applies in several attributes of quality. A component can be fit for some use, but defective in different contexts. Some component can satisfy the users requirements in one environment, but can be useless in others.~\cite{jones2011economics}
 
 % http://ryreitsma.blogspot.fi/2011/07/software-has-new-quality-model-iso.html
 % Virallinen, ISO 25010: Functional suitability, Reliability, Operability, Performance efficiency, Security, Compatibility, Maintainability, Transferability
