--- a/books.bib
+++ b/books.bib
@@ -114,3 +114,14 @@ url = {https://sites.google.com/a/campioncollege.com/it_eveningschoool/problem-s
   year={1991},
   publisher={Harvard Business School Press}
 }
+
+@book{crosby1980quality,
+  title={Quality is free: the art of making quality certain},
+  author={Crosby, P.B.},
+  isbn={9780451622471},
+  lccn={79089296},
+  series={Mentor executive library},
+  url={http://books.google.fi/books?id=abM4662\_lF4C},
+  year={1980},
+  publisher={New American Library}
+}
