--- a/case/c_case.tex
+++ b/case/c_case.tex
@@ -1,7 +1,7 @@
 
  \chapter{Case: Päikky}
 
-Maininta siitä, että dataa ei kerätty ptojektin aikana, vaan jälkikäteen
+This chapter presents phases from a project done before the writing of this thesis. The execution of the project was not done with any intention of it being a part of a thesis work. All the data shown here are gathered afterwards and thus do not meet the requirements of a proper scientific study. The project is presented here as an example project of a small budget startup.
 
 \input{case/s_objectives}
 
