--- a/case/s_methods_processes.tex
+++ b/case/s_methods_processes.tex
@@ -231,7 +231,7 @@ Another clear mistake was the effort put to generating automatic reports for the
 %		tilastoivat ja raportoivat mieluummin excelillä
 
 
-\textbf{Practices used.} Some practices the customer was satisfied were in the area of communication. The weekly meetings were mentioned as an important part of the development. Most importantly, in these meetings the whole team should agree on what tasks are to be done in the following sprint. Also the tasks would be discussed through to assure that everyone in the team would understand the principles of the features.
+\textbf{Practices.} Some practices the customer was satisfied with were in the area of communication. The weekly meetings were mentioned as an important part of the development. Most importantly, in these meetings the whole team should agree on what tasks are to be done in the following sprint. Also the tasks would be discussed through to assure that everyone in the team would understand the principles of the features.
 
 In addition to the weekly meetings, communication through the digital channels were mentioned as a good practice. However, the customers view was that there could have been even more communication. The customers thoughts on this were that the development team probably would not want any more interruptions on their daily work, so the situation could have been in balance after all.
 % Mitkä laatujutut olleet hyviä/huonoja?
