--- a/general/c_intro.tex
+++ b/general/c_intro.tex
@@ -1,14 +1,10 @@
 
 \chapter{Introduction}
  
- ECO: Economics of software quality
- ROI: Improving the ROI of software quality--
- 
- \begin{itemize}
+Konteksti
 
+Ratkaistava ongelma
 
+"Tässä diplomityössä..."
 
-
- \item Technical debt ECO: Chapter 7
- 
- \end{itemize} 
+Rakenne luku kerrallaan + sisällön esittely "lause per luku"
