--- a/general/c_pretext.tex
+++ b/general/c_pretext.tex
@@ -11,7 +11,7 @@
 \vspace{6.8cm}
  
 \noindent{\bf\large \textsf{Mikko Pohja}}\\
-{\bf\large \textsf{Maximizing quality in a startup software project}}\\
+{\bf\large \textsf{Achieving satisfactory quality in a startup software project}}\\
 \textsf{Master of Science Thesis}
  
 \vspace{8.7cm} % jos kaksi otsikkoriviä vaihda -> 6.7cm
@@ -46,10 +46,17 @@
 \end{spacing}
  
 \noindent
-Ensimmäinen kappale
+Konteksti
  
 \noindent
-Toinen kappale
+Ongelma
+
+\noindent
+Mitä tehty ratkaisemiseksi (tässä diplomityössä..)
+
+\noindent
+Arvio onnistumisesta
+
 \newpage
 \chapter*{ABSTRACT}
 \begin{spacing}{1.0}
@@ -63,23 +70,26 @@ Toinen kappale
 \textsf{Keywords: }\\
 \end{spacing}
  
-\noindent 
-First paragraph
  
 \noindent
-Second paragraph
+ENG Konteksti
  
+\noindent
+ENG Ongelma
+
+\noindent
+ENG Mitä tehty ratkaisemiseksi (tässä diplomityössä..)
+
+\noindent
+ENG Arvio onnistumisesta
+
+
 \newpage
  
 \chapter*{PREFACE}
-\noindent Tämä (\textit{d-tyo.tex}) on \LaTeX-pohja Tampereen teknillisen
-yliopiston opinnäytetöitä varten. Samaan pakettiin kuuluu myös
-tiedosto \mbox{\textit{tutthesis.cls}}, joka sisältää taittoteknisiä
-lisäyksiä \LaTeX:n alkuperäiseen \textit{report.cls}-luokkatiedostoon.
- 
-Lisäksi otsikkosivua varten tarvitaan tiedosto \textit{tut-logo.xxx}, jonka
-tulee sisältää TTY:n logo. Tiedoston tulee
-olla joko \textit{.eps}- tai \textit{.pdf}-muodossa riippuen \LaTeX-versiosta.
+\noindent 
+
+Tässä on tapana vaan kiitellä kaikkia. Tämä nimenomainen templaattiin laitettu teksti on ihan tyhmä.
  
 \newpage
 \tableofcontents
