--- a/improving/s_life-cycle.tex
+++ b/improving/s_life-cycle.tex
@@ -1,4 +1,4 @@
-\section{Life Cycle}
+\section{Quality Improvement Across the Life Cycle}
 
 \begin{figure}[t]
 \begin{center}
@@ -8,7 +8,7 @@
 \label{fig:quality_life_cycle}
 \end{figure}
 
-A solid base for high quality is built with good specification, requirements and planning in the beginning of a project. When development begins, there should be ways to prevent as much defects as possible. As defects appear anyway, they should be detected and fixed as early as possible. Detecting the defects early lowers the effort needed to fix them. 
+Solid foundation for high quality is built with good specification, requirements and planning in the beginning of a project. When development begins, there should be ways to prevent as much defects as possible. As defects appear anyway, they should be detected and fixed as early as possible. Detecting the defects early lowers the effort needed to fix them. 
 
 The hardest defects to remove are found in the requirements and design because testing and static analysis cannot find them. This is because these defects tend to be deficiency of features and errors of logic rather than errors in code. These defects are usually situated in the beginning of the life-cycle and thus require great effort to be removed. 
 
