--- a/improving/s_pretest.tex
+++ b/improving/s_pretest.tex
@@ -8,13 +8,13 @@ Jones presents a suite of pretest defect removal activities and their efficienci
 
 \begin{enumerate}
 
-\item Personal desk checking
+\item personal desk checking
 
-\item Scrum sessions
+\item scrum sessions
 
-\item Client reviews of specifications
+\item client reviews of specifications
 
-\item Informal peer reviews
+\item informal peer reviews
 
 \end{enumerate}
 
@@ -27,7 +27,7 @@ Each of these forms of defect removal activities are targeted towards a specific
 \subsection{Personal Desk Checking} 
 Personal desk checking is a manual operation in where the logic of an algorithm is checked by the creator of the algorithm . The logic used in the desk checking is presented as a pseudo-code rather than the implemented actual program code. The algorithm is executed by a person acting as a computer. The person performing the desk checking carefully follows the algorithm while filling a table of notes with pen and paper. 
 
-The notes form a table which include columns for: line number, variables in use, conditions, input and output. Line number is necessary to identify the line being executed. All variables have a column in alphabetical order. As the value of the variable changes, the appropriate column is filled up. Conditions columns include a column for every condition in the algorithm which shows the result of the condition in either true(T) or false (F). The condition column is updated whenever the condition is evaluated. Input and output columns are used for the inputs got from the user and the output from the program.~\cite{campionDescCheck}
+The notes form a table which include columns for: line number, variables in use, conditions, input and output. Line number is necessary to identify the line being executed. All variables have a column in alphabetical order. As the value of the variable changes, the appropriate column is filled up. Conditions columns include a column for every condition in the algorithm which shows the result of the condition in either true (T) or false (F). The condition column is updated whenever the condition is evaluated. Input and output columns are used for the inputs got from the user and the output from the program.~\cite{campionDescCheck}
 
 Desk checking is the oldest form of software defect removal. It has been in use since the beginning of the history of computers. In the early days of computing, testing the programs was difficult because of the limited numbers of computers. The computers worked on production work in the daytime and often the testing had to be done at night. In those days, testing had only an efficiency of 70\% in finding bugs, because of the primitive test case design and limited time available for testing. Therefore the desk checking were a necessary addition to testing. Nowadays the desk checking is still a common activity for removing defects prior to testing. Desk checking today can be enhanced by using static analysis for program code and spell checkers and complexity tools for text documents.
 
@@ -56,19 +56,21 @@ Client reviews of specification are, like the former two methods, among the olde
 
 The products reviewed by customers usually don't include inner workings of software applications, like source code, test cases or detailed design. Capers Jones presents a list of 12 major items in directly funded software projects, which usually are reviewed:
 
+TODO: Näihin lause tai pari kuvailemaan tarkoitusta
+
 \begin{enumerate}
-	\item Requirements
-	\item Requirements changes
-	\item Architecture
-	\item High-level design, user stories, use cases
-	\item Data flow and data structure design
-	\item Development plans
-	\item Development cost estimates
-	\item Development quality estimates
-	\item Training materials
-	\item HELP text and help screens
-	\item Features of COTS packages
-	\item High-severity bug or defect repairs
+	\item Requirements.
+	\item Requirements changes.
+	\item Architecture.
+	\item High-level design, user stories, use cases.
+	\item Data flow and data structure design.
+	\item Development plans.
+	\item Development cost estimates.
+	\item Development quality estimates.
+	\item Training materials.
+	\item HELP text and help screens.
+	\item Features of COTS packages.
+	\item High-severity bug or defect repairs.
 \end{enumerate}
 
 Client reviews are an important practice as the clients are paying for the software. There are many clients being active participants in reviews and paying serious attention to the deliverables of software project. Simultaneously some clients are overlooking the reviews and falsely assuming that the software teams know what they are doing. The lawsuits speak on behalf of the reviews, having passive or partial reviews as a worrying feature.
