--- a/improving/s_preventing.tex
+++ b/improving/s_preventing.tex
@@ -20,7 +20,7 @@ Another result from the studies was that using the formal inspections for a long
 
 % Agile development method p.136 / Agile manifesto?
 \subsection{Agile Development Method} 
-Agile development method is a set of guidelines based on a publication made by 17 software developers. The developers had gathered to discuss about lightweight development methods and the result was the published in The Agile Manifesto~\cite{beck2001agile}. The people in the signature of the manifest formed the Agile Software Development Alliance.
+Agile development method is a set of guidelines based on a publication made by 17 software developers. The developers had gathered to discuss about lightweight development methods and the result was the published in The Agile Manifesto. The people in the signature of the manifest formed the Agile Software Development Alliance.
 
 The Agile Manifesto reads as follows:
 
@@ -64,7 +64,7 @@ The Agile Manifesto reads as follows:
 
 \end{quote}
 
-These methods are based on the actual methods present in the work done by the 17 developers in that time. The purpose of the manifest is not to give definite answers but some guidelines of how to prefer the aspects of software development. It is not trying tell how things are done but help developers with agile methods. When listing the things to value, the purpose is not to underrate the aspects with lower priority but give some hints about what brings the most value to the project.
+These methods are based on the actual methods present in the work done by the 17 developers in that time. The purpose of the manifest is not to give definite answers but some guidelines of how to prefer the aspects of software development. It is not trying tell how things are done but help developers with agile methods. When listing the things to value, the purpose is not to underrate the aspects with lower priority but give some hints about what brings the most value to the project.~\cite{beck2001agile}
 
 % TODO: Principlet avattuna paremmin ??????
 
@@ -72,8 +72,7 @@ TODO: Luvut ja faktat 25\% Defect prevention efficiency, 5\% Defect removal effi
 
 % Embedded users p.136 p.58
 
-\subsection{Embedded Users} 
-Embedded users is an Agile method where one or more user representatives are embedded into the project team. The purpose of the user representative is to work in cooperation with the developers creating the critical requirements which are then implemented in short sprints. The idea is to build the specific business critical features and get those running as quickly as possible. The embedded customer representatives are also used to give support in reviewing the features and requirements. The main purpose of this method is to improve the requirements definition.
+\textbf{Embedded users.} Embedded users is an Agile method where one or more user representatives are embedded into the project team. The purpose of the user representative is to work in cooperation with the developers creating the critical requirements which are then implemented in short sprints. The idea is to build the specific business critical features and get those running as quickly as possible. The embedded customer representatives are also used to give support in reviewing the features and requirements. The main purpose of this method is to improve the requirements definition.
 
 This method is proven to be useful in small software projects under 2500 function points and effective in projects with under 100 users and size below 1000 function points. In larger scale applications, over 10000 function points or more than 1000 user, a single representative cannot effectively provide enough requirements. This method can however be scaled up by using multiple user representatives, but like other Agile methods, this is most effective in smaller projects.
 
