--- a/qa_startup/c_qa_startup.tex
+++ b/qa_startup/c_qa_startup.tex
@@ -1,7 +1,7 @@
 
- \chapter{Quality Assurance in Software Startup Project}
+ \chapter{Improving Quality in Software Startup Project}
 
-Quality assurance in a startup environment differs from the QA activities in traditional software development. This is because the requirements and goals of a startup project are usually considerably different from a traditional software projects. Furthermore, even the term software quality can be partially redefined for a better fit in a software startup. Eric Ries describes that the development of Minimum Viable Products questions the traditional notions of quality and this is the most vexing aspects of the development. TODO: Viite
+Improving quality in a startup environment differs from the QA activities in traditional software development. This is because the requirements and goals of a startup project are usually considerably different from a traditional software projects. Furthermore, even the term software quality can be partially redefined for a better fit in a software startup. Eric Ries describes that the development of Minimum Viable Products questions the traditional notions of quality and this is the most vexing aspects of the development.~\cite{ries2011lean}
 
 \input{qa_startup/s_evaluation}
 
