Improvements based on earlier comments from tjm and some todo-markings

--- a/improving/s_post_release.tex
+++ b/improving/s_post_release.tex
@@ -28,7 +28,7 @@ The usage of the severity scale is for arranging the defects to an order in whic
 
 \subsection{Maintainability}
 
-The maintainability of software can be evaluated with several different metrics. The topic is researched by IBM by interviewing a wide range of maintenance programmers about what makes the software maintainability better or worse. The three most useful metrics are introduced below. TODO: VIITE (KIRJASSA EI MAINITA)
+The maintainability of software can be evaluated with several different metrics. According to Capers Jones, this is researched by IBM by interviewing a wide range of maintenance programmers about what makes the software maintainability better or worse. The three most useful metrics are introduced below.
 
 \textbf{Maintenance assignment scope} is the amount of source code or functionality that a single programmer can handle for one year. The range of the maintenance assignment scope indicated by the interviews is from 300 function points to about 3000 function points. Measured in source code statements of java-like language, the range is from a low 15000 statements to a high 150000 code statements. These figures are assembled from the sizes of applications under maintenance and the sizes of the maintenance teams. These ranges seem to work well for maintenance programmers, but the same idea can be applied to other kinds of maintenance specialists.
 
